jenkins-master/deployment.yaml

# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins-master
  namespace: jenkins
  labels:
    app: jenkins-master
spec:
  selector:
    matchLabels:
      app: jenkins-master
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: jenkins-master
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      # initContainers:
        # Init containers are exactly like regular containers, except:
          # - Init containers always run to completion.
          # - Each init container must complete successfully before the next one starts.
      containers:
      - name: jenkins-master
        image: jenkins/jenkins:jdk17
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 5
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 30
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 5
          timeoutSeconds: 2
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 30
        ports:
        - containerPort: 8080
          name: jenkins-master
        - containerPort: 50000
          name: jnlp-port
        volumeMounts:
        - name: localtime
          mountPath: /etc/localtime
        - name: jenkins-home
          mountPath: /var/jenkins_home
      volumes:
        - name: localtime
          hostPath:
            path: /usr/share/zoneinfo/Asia/Seoul
        - name: jenkins-home
          persistentVolumeClaim:
            claimName: jenkins-master-volume
      restartPolicy: Always
