jenkins-master/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service
  namespace: jenkins
spec:
  type: ClusterIP
  ports:
    - port: 8080
  selector:
    app: jenkins-master
