jenkins-master/ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: jenkins
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-jmjang
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: 'true'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  rules:
  - host: jenkins.jmjang.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name:  jenkins-service
            port:
              number: 8080
  tls:
    - hosts:
        - jenkins.jmjang.net
      secretName: jenkins-tls-secret
